--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "homepage": "https://github.com/kennyt85/liri-node-app#readme",
   "dependencies": {
+    "inquirer": "^5.0.1",
     "node-spotify-api": "^1.0.7",
+    "request": "^2.83.0",
     "twitter": "^1.7.1"
   }
 }
